# terminal-game

./: CLAUDE.md  LICENSE  README.md  launcher.py  pyproject.toml
games/: 2048.py  game_life.py  manifest.py  pong.py  snake_game.py  tetris_game.py
terminal_arcade/: __main__.py  launcher.py
terminal_arcade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
terminal_arcade/games/: frogger.py  manifest.py  minesweeper.py  pong.py  solitaire.py
