[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-arcade"
version = "0.1.0"
description = "Classic terminal games — Snake, Tetris, 2048, Game of Life, Minesweeper, Pong"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
game = "terminal_arcade.launcher:main"

[tool.setuptools.packages.find]
include = ["terminal_arcade*"]
